--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import './fonts.scss';
 @import './reset.scss';
 
+@import './body.scss';
 @import './swiper.scss';
 @import './additional-classes.scss';
 @import './sub-title.scss';
