--- a/src/scss/description.scss
+++ b/src/scss/description.scss
@@ -30,10 +30,6 @@
     color: #1b1c21;
     margin-top: 14px;
 
-    @media screen and (min-width: 1650px) {
-      font-size: 20px;
-    }
-
     @media screen and (min-width: 1088px) {
       margin: 0;
     }
@@ -57,7 +53,7 @@
           display: none;
         }
 
-        @media screen and (min-width: 1440px) {
+        @media screen and (min-width: 1240px) {
           display: block;
           padding-top: 20px;
         }
@@ -82,10 +78,13 @@
     display: flex;
     justify-content: center;
     width: 100%;
+
+    @media screen and (max-width: 1089px) {
+      margin-top: 16px;
+    }
   }
   &__img {
     position: static;
-    margin-top: 16px;
     width: 100%;
     height: auto;
     flex-shrink: 0;
@@ -96,7 +95,6 @@
       position: static;
       height: auto;
       width: 100%;
-      margin-top: 20px;
       border-radius: 10px;
       min-height: 208px;
       min-width: 360px;
