--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
-body {
-  margin: 0;
-  font-family: "TT Lakes"; }
-
 ul, li, p, a, h1, h2, h3, h4, h5 {
   margin: 0;
   padding: 0; }
@@ -36,6 +32,13 @@ input[type=number]::-webkit-outer-spin-button {
   -moz-appearance: none;
   appearance: none;
   margin: 0; }
+
+body {
+  margin: 0;
+  font-family: "TT Lakes";
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative; }
 
 .swiper-pagination {
   display: none; }
@@ -73,6 +76,9 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 1; }
   .overlay__dialogs {
     z-index: 3; }
+    @media screen and (max-width: 440px) {
+      .overlay__dialogs {
+        opacity: 1; } }
 
 .sub-title {
   font-weight: 400;
@@ -202,17 +208,22 @@ input[type=number]::-webkit-outer-spin-button {
 .mobile-menu {
   padding: 24px;
   width: 320px;
-  height: 100%;
+  height: auto;
   position: absolute;
+  background: #fff;
   top: 0;
   left: 0;
-  z-index: 3;
-  background: #fff; }
+  bottom: 0; }
+  @media screen and (max-width: 1440px) {
+    .mobile-menu {
+      z-index: 3; } }
   @media screen and (max-width: 1120px) {
     .mobile-menu {
       display: none;
-      box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2);
-      height: 1024px; } }
+      box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2); } }
+  @media screen and (max-width: 440px) {
+    .mobile-menu {
+      box-shadow: none; } }
   .mobile-menu--show {
     display: block; }
     @media screen and (max-width: 440px) {
@@ -432,14 +443,18 @@ input[type=number]::-webkit-outer-spin-button {
     display: none; } }
 
 .title-and-buttons-wrapper {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media screen and (max-width: 1440px) {
+    .title-and-buttons-wrapper {
+      position: static; } }
 
 .title {
   font-weight: 700;
   font-size: 28px; }
-  .title::before {
+  .title::after {
     content: '';
     display: block;
     position: absolute;
@@ -447,10 +462,15 @@ input[type=number]::-webkit-outer-spin-button {
     height: 40px;
     border-radius: 2px;
     background: #41f6d7;
-    left: calc(320px + 1px);
-    top: 32px; }
+    left: -33px;
+    top: -2px; }
+    @media screen and (max-width: 1440px) {
+      .title::after {
+        position: absolute;
+        left: calc(320px + 1px);
+        top: 32px; } }
     @media screen and (max-width: 1120px) {
-      .title::before {
+      .title::after {
         left: 0;
         top: 120px; } }
 
@@ -481,9 +501,6 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 14px;
     color: #1b1c21;
     margin-top: 14px; }
-    @media screen and (min-width: 1650px) {
-      .description__text {
-        font-size: 20px; } }
     @media screen and (min-width: 1088px) {
       .description__text {
         margin: 0; } }
@@ -500,7 +517,7 @@ input[type=number]::-webkit-outer-spin-button {
       @media screen and (min-width: 767px) {
         .description__text--additional-second {
           display: none; } }
-      @media screen and (min-width: 1440px) {
+      @media screen and (min-width: 1240px) {
         .description__text--additional-second {
           display: block;
           padding-top: 20px; } }
@@ -515,9 +532,11 @@ input[type=number]::-webkit-outer-spin-button {
     display: flex;
     justify-content: center;
     width: 100%; }
+    @media screen and (max-width: 1089px) {
+      .description__img-wrapper {
+        margin-top: 16px; } }
   .description__img {
     position: static;
-    margin-top: 16px;
     width: 100%;
     height: auto;
     flex-shrink: 0;
@@ -528,7 +547,6 @@ input[type=number]::-webkit-outer-spin-button {
         position: static;
         height: auto;
         width: 100%;
-        margin-top: 20px;
         border-radius: 10px;
         min-height: 208px;
         min-width: 360px; } }
@@ -865,7 +883,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 0;
   border: none;
   width: 440px;
-  height: 940px;
+  height: auto;
   box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2), -2px 0 4px 0 rgba(69, 79, 126, 0.02);
   background: #fff;
   position: absolute;
@@ -873,15 +891,16 @@ input[type=number]::-webkit-outer-spin-button {
   left: 0;
   margin: 0;
   margin-left: auto;
-  z-index: 3; }
+  z-index: 3;
+  bottom: 0; }
   @media screen and (max-width: 600px) {
     .dialog {
       width: 320px;
-      height: 676px;
       padding-top: 50px; } }
   @media screen and (max-width: 440px) {
     .dialog {
-      width: 100%; } }
+      width: 100%;
+      box-shadow: none; } }
   .dialog__input {
     margin-bottom: 16px; }
   .dialog__textarea {
