--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -2,7 +2,7 @@
   padding: 0;
   border: none;
   width: 440px;
-  height: auto;
+  height: 100vh;
   box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2),
     -2px 0 4px 0 rgba(69, 79, 126, 0.02);
   background: $bgColorWhite;
@@ -12,7 +12,11 @@
   margin: 0;
   margin-left: auto;
   z-index: 3;
-  bottom: 0;
+  overflow-y: scroll;
+
+  @media screen and (max-width: 1120px) {
+    overflow: scroll;
+  }
 
   @media screen and (max-width: 600px) {
     width: 320px;
@@ -47,13 +51,15 @@
   }
 
   &__button {
-    position: absolute;
-    left: -70px;
+    position: fixed;
+    right: 460px;
     top: 34px;
 
     @media screen and (max-width: 600px) {
+      position: absolute;
       left: 12px;
       top: -22px;
+      right: 0;
     }
   }
 
