--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -3,5 +3,11 @@ body {
   font-family: $fontFamily;
   max-width: 1440px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
   position: relative;
+
+  @media screen and (max-width: 1120px) {
+    display: block;
+  }
 }
